--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -3,13 +3,13 @@
     <div class="col-md-12">
       <ul class="nav nav-tabs" role="tablist">
         <li class="nav-item">
-          <a class="nav-link active" data-toggle="tab" href="#clubs" role="tab">Clubs</a>
+          <a class="nav-link active" data-toggle="tab" href="#clubs" role="tab">{{"List.Clubs" | translate}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#teams" role="tab">Teams</a>
+          <a class="nav-link" data-toggle="tab" href="#teams" role="tab">{{"List.Teams" | translate}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#players" role="tab">Players</a>
+          <a class="nav-link" data-toggle="tab" href="#players" role="tab">{{"List.Players" | translate}}</a>
         </li>
       </ul>
       <div class="tab-content">
