--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -12,8 +12,8 @@
         </div>
         <div class="col-md-8">
           <ul class="list-unstyled">
-            <li class="list-goup-item">Location: {{player?.location.city}}</li>
-            <li class="list-goup-item">Age: {{player?.age}}</li>
+            <li class="list-goup-item">{{"Results.Location"| translate}}: {{player?.location.city}}</li>
+            <li class="list-goup-item">{{"Results.Age"| translate}}: {{player?.age}}</li>
           </ul>
         </div>
       </div>
@@ -31,8 +31,8 @@
         </div>
         <div class="col-md-8">
           <ul class="list-unstyled">
-            <li class="list-goup-item">Location: {{team?.location.city}}</li>
-            <li class="list-goup-item">Age Group: {{team?.age_group}}</li>
+            <li class="list-goup-item">{{"Results.Location"| translate}}: {{team?.location.city}}</li>
+            <li class="list-goup-item">{{"Results.AgeGroup"| translate}}: {{team?.age_group}}</li>
           </ul>
         </div>
       </div>
@@ -62,7 +62,7 @@
         </div>
         <div class="col-md-8">
           <ul class="list-unstyled">
-            <li class="list-goup-item">Location: {{club?.location.city}}</li>
+            <li class="list-goup-item">{{"Results.Location" | translate}}: {{club?.location.city}}</li>
           </ul>
         </div>
       </div>
