--- a/src/app/club-profile/club.component.html
+++ b/src/app/club-profile/club.component.html
@@ -5,10 +5,10 @@
 
       <div class="row">
         <div class="col-md-12 lead">
-          Club Profile
+          {{"ClubProfile.ClubProfile" | translate}}
 
-          <button *ngIf="!userFollowing" (click)="followClub()" type="button" class="btn btn-sm btn-primary pull-right">Follow</button>
-          <button *ngIf="userFollowing" (click)="unfollowClub()" type="button" class="btn btn-sm btn-danger pull-right">Unfollow</button>
+          <button *ngIf="!userFollowing" (click)="followClub()" type="button" class="btn btn-sm btn-primary pull-right">{{"Follow" | translate}}</button>
+          <button *ngIf="userFollowing" (click)="unfollowClub()" type="button" class="btn btn-sm btn-danger pull-right">{{"Unfollow" | translate}}</button>
 
           <hr>
         </div>
@@ -27,7 +27,6 @@
             </div>
             <div class="media-body">
               <h3 class="media-heading">{{(clubData | async)?.name}}</h3>
-
             </div>
           </div>
 
@@ -40,7 +39,7 @@
 
       <div class="row">
         <div class ="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
-          <h4>Description:</h4>
+          <h4>{{"ClubProfile.Description" | translate}}:</h4>
           {{(clubData | async)?.description}}
         </div>
       </div>
@@ -50,7 +49,7 @@
 
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
-          <h4>Teams:</h4>
+          <h4>{{"ClubProfile.Teams" | translate}}:</h4>
         </div>
       </div>
 
@@ -65,8 +64,8 @@
               </div>
               <div class="media-body">
                 <a (click)="sendToTeam(team.id)">{{team.name}}</a>
-                <button *ngIf="follows.indexOf(team.id) === -1" (click)="followTeam(team.id)" type="button" class="btn btn-sm btn-primary pull-right">Follow</button>
-                <button *ngIf="follows.indexOf(team.id) !== -1" (click)="unfollowTeam(team.id)" type="button" class="btn btn-sm btn-danger pull-right">Unfollow</button>
+                <button *ngIf="follows.indexOf(team.id) === -1" (click)="followTeam(team.id)" type="button" class="btn btn-sm btn-primary pull-right">{{"Follow" | translate}}</button>
+                <button *ngIf="follows.indexOf(team.id) !== -1" (click)="unfollowTeam(team.id)" type="button" class="btn btn-sm btn-danger pull-right">{{"Unfollow" | translate}}</button>
               </div>
             </div>
           </div>
@@ -78,7 +77,7 @@
 
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
-          <h4>Posts:</h4>
+          <h4>{{"ClubProfile.Posts" | translate}}:</h4>
         </div>
       </div>
 
