--- a/src/app/login/login-component.html
+++ b/src/app/login/login-component.html
@@ -9,7 +9,7 @@
 <body>
 <div class="g-row sign-in">
   <div class="g-col">
-    <h1 class="sign-in__heading">{{'LogInPage.Title' | translate}}</h1>
+    <h1 class="sign-in__heading">{{'Login.Title' | translate}}</h1>
     <button class="sign-in__button" (click)="af.login('facebook')" type="button">Facebook</button>
     <button class="sign-in__button" (click)="af.login('google')" type="button">Google</button>
   </div>
