--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -24,7 +24,7 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="row">
-              <div class="col-md-12 lead">User profile
+              <div class="col-md-12 lead">{{"UserProfile.UserProfile" | translate}}
                 <hr>
 
               </div>
@@ -39,7 +39,7 @@
                 <div class="row">
                   <div class="col-md-12">
                     <h2 class="only-bottom-margin"> {{(profileData | async)?.name}}
-                      <span class="badge badge-success" *ngIf="currentUser === userId">Me</span>
+                      <span class="badge badge-success" *ngIf="currentUser === userId">{{"Me" | translate}}</span>
                     </h2>
 
                   </div>
@@ -47,7 +47,7 @@
                 <div class="row">
                   <div class="col-md-6">
 
-                    <span *ngIf="currentUser === userId" class="text-muted">Email:</span> {{(profileData | async)?.email}} <br>
+                    <span *ngIf="currentUser === userId" class="text-muted">{{"UserProfile.Email" | translate}}:</span> {{(profileData | async)?.email}} <br>
                   </div>
                 </div>
               </div>
@@ -55,7 +55,7 @@
             <hr>
             <div class="row">
 
-              <div class="col-md-12 lead">Following</div>
+              <div class="col-md-12 lead">{{"UserProfile.Following" | translate}}</div>
             </div>
             <div class="row">
               <div class="col-md-4 ">
@@ -66,11 +66,11 @@
                     <div class="list-group-item list-group-item-action" *ngIf="i<10">
                     <a (click)="sendToTeam(team.id)"> {{team.name}} </a>
 
-                    <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowTeam(team.id)">Unfollow</button>
+                    <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowTeam(team.id)">{{"Unfollow" | translate}}</button>
                   </div>
                 </div>
-                  <div class="list-group-item list-group-item-action" *ngIf="(followingTeams | async)?.length > 10"> 
-                    <a (click)="sendToTeamsList(currentUser)">See all</a>
+                  <div class="list-group-item list-group-item-action" *ngIf="(followingTeams | async)?.length > 10">
+                    <a (click)="sendToTeamsList(currentUser)">{{"UserProfile.SeeAll" | translate}}</a>
                 </div>
                 </div>
               </div>
@@ -80,11 +80,11 @@
                   <div *ngFor="let player of followingPlayers | async; let i = index">
                     <div class="list-group-item list-group-item-action" *ngIf="i<10">
                     <a (click)="sendToPlayer(player.id)" > {{player.first_name + " " + player.last_name}} </a>
-                    <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowPlayer(player.id)">Unfollow</button>
+                    <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowPlayer(player.id)">{{"Unfollow" | translate}}</button>
                   </div>
                 </div>
                   <div class="list-group-item list-group-item-action" *ngIf="(followingPlayers | async)?.length > 10">
-                    <a (click)="sendToPlayersList(currentUser)">See all</a>
+                    <a (click)="sendToPlayersList(currentUser)">{{"UserProfile.SeeAll" | translate}}</a>
                   </div>
                 </div>
               </div>
@@ -94,11 +94,11 @@
                   <div *ngFor="let club of followingClubs | async; let i = index">
                     <div class="list-group-item list-group-item-action" *ngIf="i<10">
                     <a (click)="sendToClub(club.id)"> {{club.name}} </a>
-                    <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowClub(club.id)">Unfollow</button>
+                    <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowClub(club.id)">{{"Unfollow" | translate}}</button>
                   </div>
                 </div>
                   <div class="list-group-item list-group-item-action" *ngIf="(followingClubs | async)?.length > 10">
-                    <a (click)="sendToClubsList(currentUser)">See all</a>
+                    <a (click)="sendToClubsList(currentUser)">{{"UserProfile.SeeAll" | translate}}</a>
                   </div>
                 </div>
               </div>
