--- a/src/app/teams-followed/teams-followed.html
+++ b/src/app/teams-followed/teams-followed.html
@@ -3,7 +3,9 @@
 <head>
   <title>Teams Followed</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" rel="stylesheet"/>
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+          integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+          crossorigin="anonymous"></script>
   <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
   <script src="https://npmcdn.com/bootstrap@4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
   <meta charset="UTF-8">
@@ -12,15 +14,17 @@
 </head>
 <body>
 <div class="container-fluid">
-<div class="list-group">
-  <a class="list-group-item active lead text-center"> Teams </a>
-  <div *ngFor="let team of followingTeams | async" class="list-group-item list-group-item-action">
-    <div class="row">
-    <a (click)="sendToTeam(team.id)"> {{team.name}} </a>
-    <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowTeam(team.id)">Unfollow</button>
-  </div>
+  <div class="list-group">
+    <a class="list-group-item active lead text-center"> {{"TeamsFollowed.TeamsFollowed"| translate}} </a>
+    <div *ngFor="let team of followingTeams | async" class="list-group-item list-group-item-action">
+      <div class="row">
+        <a (click)="sendToTeam(team.id)"> {{team.name}} </a>
+        <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right"
+                (click)="unfollowTeam(team.id)">{{"Unfollow"| translate}}
+        </button>
+      </div>
+    </div>
   </div>
 </div>
-    </div>
 </body>
 </html>
