--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,7 @@
             <button type="button" class="btn btn-secondary" (click)="translate.setDefaultLang('en')"><span class="flag-icon flag-icon-gb"></span></button>
             <button type="button" class="btn btn-secondary" (click)="translate.setDefaultLang('ro')"><span class="flag-icon flag-icon-ro"></span></button>
             <button type="button" class="btn btn-secondary" (click)="translate.setDefaultLang('jp')"><span class="flag-icon flag-icon-jp"></span></button>
+			 <button type="button" class="btn btn-secondary" (click)="translate.setDefaultLang('lt')"><span class="flag-icon flag-icon-lt"></span></button>
           </div>
     	</div>
     </div>
