--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,26 +1,48 @@
 <div>
-  <div *ngFor="let player of players" class="col-sm-3 col-md-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
+  <ul class="nav nav-tabs" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" data-toggle="tab" href="#clubs" role="tab">{{"Results.Clubs"| translate}}</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#teams" role="tab">{{"Results.Teams"| translate}}</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#players" role="tab">{{"Results.Players"| translate}}</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#users" role="tab">{{"Results.Users"| translate}}</a>
+    </li>
+  </ul>
+  <br>
+  <div class="tab-content">
+    <div id="players" class="tab-pane active" role="tabpanel">
+  <div *ngFor="let player of players" class=" col-sm-3 col-md-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1 ">
     <div class="panel panel-default">
       <div class="panel-heading">
         <a (click)="sendToPlayer(player.id)">
           <h3 class="panel-title">{{player.first_name}} {{player.last_name}}</h3>
-        </a>
-      </div>
+          </a>
+          </div>
 
       <div class="panel-body">
-        <div class="col-md-4">
+        <div class="col-xs-6 col-md-3">
           <img src="{{player.avatar}}" class="as-banner"/>
         </div>
-        <div class="col-md-8">
+        <div class="col-xs-12 col-md-5">
           <ul class="list-unstyled">
             <li class="list-goup-item">{{"Results.Location"| translate}}: {{player?.location.city}}</li>
             <li class="list-goup-item">{{"Results.Age"| translate}}: {{player?.age}}</li>
           </ul>
         </div>
+        <div class="col-xs-12 col-md-4">
+          <button *ngIf="followPlayers.indexOf(player.id) === -1" (click)="followPlayer(player.id)" type="button" class="btn btn-sm btn-primary pull-right">{{"Follow" | translate}}</button>
+          <button *ngIf="followPlayers.indexOf(player.id) !== -1" (click)="unfollowPlayer(player.id)" type="button" class="btn btn-sm btn-danger pull-right">{{"Unfollow" | translate}}</button>
+        </div>
       </div>
     </div>
   </div>
-
+</div>
+<div id="teams" class="tab-pane" role="tabpanel">
   <div *ngFor="let team of teams" class="col-md-5 col-md-offset-1">
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -29,19 +51,24 @@
         </a>
       </div>
       <div class="panel-body">
-        <div class="col-md-4">
+        <div class="col-xs-6 col-md-3">
           <img src="{{team.avatar}}" class="as-banner"/>
         </div>
-        <div class="col-md-8">
+        <div class="col-xs-12 col-md-5">
           <ul class="list-unstyled">
             <li class="list-goup-item">{{"Results.Location"| translate}}: {{team?.location.city}}</li>
             <li class="list-goup-item">{{"Results.AgeGroup"| translate}}: {{team?.age_group}}</li>
           </ul>
         </div>
+        <div class="col-xs-12 col-md-4">
+          <button *ngIf="followTeams.indexOf(team.id) === -1" (click)="followTeam(team.id)" type="button" class="btn btn-sm btn-primary pull-right">{{"Follow" | translate}}</button>
+          <button *ngIf="followTeams.indexOf(team.id) !== -1" (click)="unfollowTeam(team.id)" type="button" class="btn btn-sm btn-danger pull-right">{{"Unfollow" | translate}}</button>
       </div>
     </div>
   </div>
-
+</div>
+</div>
+<div id="users" class="tab-pane" role="tabpanel">
   <div *ngFor="let user of users" class="col-md-5 col-md-offset-1">
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -50,13 +77,14 @@
         </a>
       </div>
       <div class="panel-body">
-        <div class="col-md-4">
+        <div class="col-xs-6 col-md-4">
           <img src="{{user.avatar}}" class="as-banner"/>
         </div>
       </div>
     </div>
   </div>
-
+</div>
+<div id="clubs" class="tab-pane active" role="tabpanel">
   <div *ngFor="let club of clubs" class="col-md-5 col-md-offset-1">
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -65,15 +93,21 @@
         </a>
       </div>
       <div class="panel-body">
-        <div class="col-md-4">
+        <div class="col-xs-6 col-md-3">
           <img src="{{club.avatar}}" class="as-banner"/>
         </div>
-        <div class="col-md-8">
+        <div class="col-xs-12 col-md-5">
           <ul class="list-unstyled">
             <li class="list-goup-item">{{"Results.Location" | translate}}: {{club?.location.city}}</li>
           </ul>
         </div>
+        <div class="col-xs-12 col-md-4">
+          <button *ngIf="followClubs.indexOf(club.id) === -1" (click)="followClub(club.id)" type="button" class="btn btn-sm btn-primary pull-right">{{"Follow" | translate}}</button>
+          <button *ngIf="followClubs.indexOf(club.id) !== -1" (click)="unfollowClub(club.id)" type="button" class="btn btn-sm btn-danger pull-right">{{"Unfollow" | translate}}</button>
+        </div>
       </div>
     </div>
   </div>
+</div>
+</div>
 </div>
