--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,7 @@
 <app-post *ngFor="let post of shownPosts " [post]="post"></app-post>
-<div class="row">
-    <div class="col-md-12 text-center">
-		<button *ngIf="(this.shownPostAmount != this.posts.length)" type="button"
-            class="btn btn-info btn-sm" (click)="showMore()">{{"Dashboard.ShowMore" | translate}}
-        </button>
-    </div>
+<div class="row search-results"
+    infinite-scroll
+    [infiniteScrollDistance]="5"
+    [infiniteScrollThrottle]="300"
+    (scrolled)="showMore()">
 </div>
