--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -37,7 +37,7 @@
                 <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
               </button>
               <button *ngIf="likes.indexOf(currentUserId) === -1" type="button"
-                      class="btn btn-primary pull-right btn-sm" (click)="likeToggle(currentUserId)">
+                      class="btn btn-default pull-right btn-sm" (click)="likeToggle(currentUserId)">
                 <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
               </button>
             </div>
