--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,5 @@
 <app-post *ngFor="let post of shownPosts " [post]="post"></app-post>
-<div class="row search-results"
+<div class="row"
     infinite-scroll
-    [infiniteScrollDistance]="5"
-    [infiniteScrollThrottle]="300"
     (scrolled)="showMore()">
 </div>
