--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -14,6 +14,19 @@
       <app-search></app-search>
       <ul class="nav navbar-nav navbar-right" [hidden]="!authService.registered">
         <li><a routerLink="/list">{{"NavBar.List" | translate}}</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            {{"NavBar.Language" | translate}} <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a (click)="translate.setDefaultLang('en')"><span class="flag-icon flag-icon-gb"></span> English</a></li>
+            <li><a (click)="translate.setDefaultLang('ru')"><span class="flag-icon flag-icon-ru"></span> Русский</a></li>
+            <li><a (click)="translate.setDefaultLang('jp')"><span class="flag-icon flag-icon-jp"></span> 日本語</a></li>
+            <li><a (click)="translate.setDefaultLang('gr')"><span class="flag-icon flag-icon-gr"></span> Ελληνικά </a></li>
+            <li><a (click)="translate.setDefaultLang('ro')"><span class="flag-icon flag-icon-ro"></span> Română</a></li>
+            <li><a (click)="translate.setDefaultLang('lt')"><span class="flag-icon flag-icon-lt"></span> Lietuvių</a></li>
+          </ul>
+        </li>
         <li>
           <a routerLink="/user/{{currentUser.uid}}">
             <img class="user" src="{{currentUser.photoURL}}">{{currentUser.displayName}}
