[AM] Started chinese translations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
           <button type="button" class="btn btn-secondary" (click)="translate.setDefaultLang('lt')"><span class="flag-icon flag-icon-lt"></span></button>
           <button type="button" class="btn btn-secondary" (click)="translate.setDefaultLang('ru')"><span class="flag-icon flag-icon-ru"></span></button>
           <button type="button" class="btn btn-secondary" (click)="translate.setDefaultLang('gr')"><span class="flag-icon flag-icon-gr"></span></button>
+          <button type="button" class="btn btn-secondary" (click)="translate.setDefaultLang('zh')"><span class="flag-icon flag-icon-zh"></span></button>
         </div>
     	</div>
     </div>
