--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -25,6 +25,7 @@
             <li><a (click)="translate.setDefaultLang('gr')"><span class="flag-icon flag-icon-gr"></span> Ελληνικά </a></li>
             <li><a (click)="translate.setDefaultLang('ro')"><span class="flag-icon flag-icon-ro"></span> Română</a></li>
             <li><a (click)="translate.setDefaultLang('lt')"><span class="flag-icon flag-icon-lt"></span> Lietuvių</a></li>
+            <li><a (click)="translate.setDefaultLang('es')"><span class="flag-icon flag-icon-es"></span> Español</a></li>
           </ul>
         </li>
         <li>
