--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1"
@@ -33,7 +33,7 @@
           </a>
         </li>
         <li>
-          <button type="button" class="btn btn-default navbar-btn" (click)="authService.logout()">
+          <button type="button" class="btn btn-primary navbar-btn" (click)="authService.logout()">
             {{"NavBar.Logout" | translate}}
           </button>
         </li>
