--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -2,7 +2,7 @@
     <div class="form-group">
         <input #input type="text" class="form-control" placeholder="Search" name="q" id="search-box">
     </div>
-    <button (click)="search(input.value)" class="btn btn-default">
+    <button (click)="search(input.value)" class="btn btn-primary">
         <i class="glyphicon glyphicon-search"></i>
     </button>
 </form>
