--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -33,7 +33,7 @@
                 <b *ngSwitchDefault>{{likes.length}} {{"Post.likes" | translate}}</b>
 
               <button *ngIf="likes.indexOf(currentUserId) !== -1" type="button"
-                      class="btn btn-primary pull-right btn-sm" (click)="likeToggle(currentUserId)">
+                      class="btn btn-success pull-right btn-sm" (click)="likeToggle(currentUserId)">
                 <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
               </button>
               <button *ngIf="likes.indexOf(currentUserId) === -1" type="button"
