[AM] Chinese done

--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -25,6 +25,8 @@
             <li><a (click)="translate.setDefaultLang('gr')"><span class="flag-icon flag-icon-gr"></span> Ελληνικά </a></li>
             <li><a (click)="translate.setDefaultLang('ro')"><span class="flag-icon flag-icon-ro"></span> Română</a></li>
             <li><a (click)="translate.setDefaultLang('lt')"><span class="flag-icon flag-icon-lt"></span> Lietuvių</a></li>
+            <li><a (click)="translate.setDefaultLang('zh')"><span class="flag-icon flag-icon-cn"></span> 汉语</a></li>
+
           </ul>
         </li>
         <li>
