--- a/src/app/team-profile/team.component.html
+++ b/src/app/team-profile/team.component.html
@@ -16,15 +16,17 @@
 
       <div class="row">
 
-        <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
-
           <div class="media">
+            <div class="col-xs-12 col-md-3">
             <div class="media-left">
               <a href="#">
                 <img class="media-object img-circle avatar avatar-original" src="{{(teamData | async)?.avatar}}"
                      alt="{{(teamData | async)?.name}}">
               </a>
+              <br>
             </div>
+          </div>
+          <div class="col-xs-12 col-md-9">
             <div class="media-body">
               <h3 class="media-heading">{{(teamData | async)?.name}}</h3>
 
