--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -11,7 +11,7 @@
       <a class="navbar-brand" routerLink="/">FanZone</a>
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
-      <app-search></app-search>
+      <app-search [hidden]="!authService.registered"></app-search>
       <ul class="nav navbar-nav navbar-right" [hidden]="!authService.registered">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
