--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -19,7 +19,9 @@
               <h4 class="media-heading"> {{post.title}} </h4>
               <i>{{(post.created_at | amCalendar:{sameElse:'D MMMM, YYYY [at] h:mm a'})}}</i> <br>
 
+              <div class="post-text">
               {{post.text}}
+              </div>
 
             </div>
           </div>
@@ -28,7 +30,7 @@
 
           <div class="row">
             <div class="col-sm-12" [ngSwitch]="likes.length">
-              
+
                 <b *ngSwitchCase="1">{{likes.length}} {{"Post.like" | translate}}</b>
                 <b *ngSwitchDefault>{{likes.length}} {{"Post.likes" | translate}}</b>
 
@@ -101,7 +103,6 @@
 
                   <br>
                   {{postComment.comment}}
-
                   <br>
                   <small><em>{{(postComment.commented_at | amCalendar:{sameElse:'D MMMM, YYYY [at] h:mm a'})}}</em>
                   </small>
