--- a/src/app/team-profile/team.component.html
+++ b/src/app/team-profile/team.component.html
@@ -56,13 +56,8 @@
       <hr>
 
       <div class="row">
-        <div class="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+        <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11 col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 ">
           <h4>{{"TeamProfile.Players"| translate}}:</h4>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
           <div *ngFor="let player of teamPlayers">
             <div class="list-group-item list-group-item-action media">
               <div class="media-left">
@@ -78,6 +73,31 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <br>
+      <hr>
+
+      <div class="row">
+
+        <div class="col-xs-12 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
+          <h4>{{"TeamProfile.RecentFixtures"| translate}}:</h4>
+          <div *ngFor="let fixture of recentFixtures">
+            <div class="list-group-item list-group-item-action">
+              <a (click)="sendToFixture(fixture.$key)">{{fixture?.home_team}} vs {{fixture?.away_team}}</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
+          <h4>{{"TeamProfile.UpcomingFixtures"| translate}}:</h4>
+          <div *ngFor="let fixture of upcomingFixtures">
+            <div class="list-group-item list-group-item-action">
+              <a (click)="sendToFixture(fixture.$key)">{{fixture?.home_team}} vs {{fixture?.away_team}}</a>
+            </div>
+          </div>
+        </div>
+
       </div>
 
       <br>
