fixtures tab no longer "active" on load

--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -124,7 +124,7 @@
         </div>
       </div>
     </div>
-    <div id="fixtures" class="tab-pane active" role="tabpanel">
+    <div id="fixtures" class="tab-pane" role="tabpanel">
       <div *ngFor="let fixture of fixtures" class="col-md-5 col-md-offset-1">
         <div class="panel panel-default">
           <div class="panel-heading">
