--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -54,7 +54,7 @@
                   <img class="media-object comment-image" src="{{postComment.author_avatar}}"
                        alt="{{postComment.author_name}}">
                 </div>
-                <div class="media-body">
+                <div class="media-body" [ngSwitch]="commentsLikes.length">
 
                   <strong class="media-heading">{{postComment.author_name}}
                     <span class="badge badge-success" *ngIf="currentUserId === postComment.author">{{"Me" | translate}}</span>
@@ -106,6 +106,23 @@
                   <small><em>{{(postComment.commented_at | amCalendar:{sameElse:'D MMMM, YYYY [at] h:mm a'})}}</em>
                   </small>
 
+
+                  <!-- SHOULD CREATE A DIRECTIVE AND INPUT THE COMMENT INTERFACE -->
+
+                  <a *ngIf="commentsLikes.indexOf(currentUserId) === -1" 
+                    style="margin-left: 20px;"><small 
+                    (click)="likeComments(currentUserId)">Like</small>
+                  </a>
+
+                  <a *ngIf="commentsLikes.indexOf(currentUserId) !== -1" 
+                    style="margin-left: 20px;"><small 
+                    (click)="likeComments(currentUserId)">Unlike</small>
+                  </a>
+
+                  <small *ngSwitchCase="1">{{commentsLikes.length}} </small>
+                  <small *ngSwitchDefault></small>
+                  
+
                 </div>
               </div>
 
@@ -114,9 +131,9 @@
 
           <div class="row">
             <div class="col-md-12">
-              <button *ngIf="(this.showBtn.length > 2) && (this.currentComLen != this.showBtn.length)" type="button"
-                      class="btn btn-info btn-sm" (click)="showMore(2)">{{"Post.ShowMore" | translate}}
-              </button>
+                <button *ngIf="(this.showBtn.length > 2) && (this.currentComLen != this.showBtn.length)" type="button"
+                    class="btn btn-info btn-sm" (click)="showMore(2)">{{"Post.ShowMore" | translate}}
+                </button>
             </div>
           </div>
 
